--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.menu-wrapper {
+  display: flex;
+  justify-content: space-between;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cards-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.country-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: gray;
+  width: 300px;
+  margin: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+img {
+  width: 100%;
+}
+.spinner-location {
+  position: absolute;
+  top: 400px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* 
+  <div className="country-wrapper">
+      <img src={country.flag}></img>
+      <h1>{country.name}</h1>
+      <div className="info wrapper">
+        <h2>Population : {country.population}</h2>
+        <h2>Region : {country.region}</h2>
+        <h2>Capital : {country.capital}</h2>
+      </div>
+    </div>
+,m,m */
