--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,61 @@
 .menu-wrapper {
   display: flex;
   justify-content: space-between;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-left: 100px;
+  margin-right: 100px;
+
+  background-color: hsl(0, 0%, 100%);
+}
+.menu-wrapper-mode {
+  display: flex;
+  justify-content: center;
+}
+
+.main {
+  background-color: hsl(0, 0%, 98%);
+  display: flex;
+  justify-content: center;
+}
+.content-wrapper {
+  /* width: 90%; */
+  justify-content: space-between;
+}
+.search-section-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 100px;
+}
+.search-input {
+  width: 500px;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border: none;
+}
+.select-input {
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: hsl(0, 0%, 100%);
 }
 .cards-wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
+  /* margin: 0px 100px; */
+  padding: 0px 100px;
 }
 .country-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: gray;
-  width: 300px;
-  margin: 20px;
+  background-color: hsl(0, 0%, 100%);
+  width: 20vw;
+  margin: 50px 0px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  overflow: hidden;
 }
 
 img {
@@ -52,15 +94,3 @@ img {
 .country-info-label {
   font-weight: bold;
 }
-/* 
-  <>
-      <div className="country-info">
-        <div className="country-image-wrapper">
-          <img src={newCountry[0].flag} />
-        </div>
-        <div className="country-detail-wrapper">
-          <p>Region {newCountry[0].region}</p>
-          <p>Sub Region {newCountry[0].subregion}</p>
-        </div>
-      </div>
-    </> */
