--- a/src/App.css
+++ b/src/App.css
@@ -64,13 +64,20 @@
 img {
   width: 100%;
 }
-.spinner-location {
+.spinner-wrapper {
   position: absolute;
   top: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .country-info {
   display: flex;
   /* justify-content: space-between; */
+  margin-left: 100px;
+  margin-right: 100px;
+  margin: 100px;
 }
 
 .country-image-wrapper {
@@ -81,6 +88,23 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+.country-info-button {
+  margin: 50px 100px;
+  border: none;
+  background-color: hsl(0, 0%, 100%);
+  padding: 5px;
+  border-radius: 5px;
+}
+.country-info-button:hover {
+  border: 10px;
+}
+.country-info-borders-button {
+  margin: 5px 10px;
+  border: none;
+  background-color: hsl(0, 0%, 100%);
+  padding: 5px;
+  border-radius: 5px;
 }
 .country-info-maingroup {
   display: flex;
