--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 .menu-wrapper-mode {
   display: flex;
   justify-content: center;
+  cursor: pointer;
 }
 
 .main {
@@ -76,8 +77,8 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   overflow: hidden;
 }
-div> a:hover {
-  color:black;
+div > a:hover {
+  color: black;
 }
 /* .info-wrapper {
   color: white;
